# maestro-console

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
claude/: workspaces.json
codex/: workspaces.json
docs/: 01-pesquisa-maestri.md  02-pesquisa-equipes-autonomas.md  03-roadmap-melhorias.md  04-pesquisa-stack-duravel.md  05-pesquisa-cabos-interativos.md  06-maestri-comportamento-auditoria.md  07-maestri-ui-ux-auditoria.md  08-pesquisa-diferenciais-melhoria.md  09-ideias-apps-similares.md  10-roadmap-fases.md  11-maestri-editar-terminal.md  11-pesquisa-canvas-infinito-gpu.md  12-pesquisa-cabo-fisica.md  13-maestro-mode.md  14-plano-orquestracao-equipe.md  15-ideias-backlog.md  16-pesquisa-diferenciais-n8n-frameworks-agente.md  17-pesquisa-comunidade-melhorias.md  18-plano-estado-por-no.md  19-plano-medidor-custo.md  20-plano-budget-cap.md  21-plano-unload-no-ram.md  22-pesquisa-dores-maestri.md  23-pesquisa-dores-concorrentes.md  24-analise-dores-vs-app.md  25-plano-reattach-orfaos.md  26-plano-ux-dialogos.md  27-plano-ux-header-card.md  28-plano-capsula-grupo.md  29-plano-budget-pausa-retomada.md  30-plano-briefing-grupo.md  31-plano-contas-por-no.md  32-plano-paste-imagem.md  33-review-producao.md  34-roteiro-fase5-runtime-device.md  ADR.md  STATUS.md  architecture.md  fluxograma-dev.html  fluxograma-dev.md  (+3 more)
maestro/: __init__.py  __main__.py  bootstrap.py  cli_backup.py  cli_floor.py  cli_routine.py  config.py
maestro/engine/: __init__.py  accounts.py  agent_run.py  artifacts.py  ask_bus.py  ask_client.py  ask_router.py  ask_sock.py  attention.py  backup.py  briefs.py  budget.py  bus.py  (+34 more)
scripts/: doctor.sh
tests/: canvas_harness.py  test_accounts.py  test_accounts_ui.py  test_adapters.py  test_add_terminal.py  test_agent_run.py  test_artifacts.py  test_artifacts_live.py  test_ask_bus.py  test_ask_capture.py  test_ask_client.py  test_ask_router.py  test_ask_skill.py  test_ask_sock.py  test_attention.py  test_backup.py  test_bootstrap.py  test_briefing_grupo_ui.py  test_briefs.py  test_budget.py  test_budget_pause.py  test_budget_pause_ui.py  test_bus.py  test_canvas_placement.py  test_click_to_place.py  test_close_node_purge.py  test_config.py  test_confirm_close_canvas.py  test_crash_flag.py  test_dialog_helpers_canvas.py  test_dialog_width_guard.py  test_envelope.py  test_filetree.py  test_floor_hooks.py  test_floor_merge_cli.py  test_floor_run.py  test_floors_core.py  test_group_ctx_canvas.py  test_groups.py  test_header_capsule_canvas.py  (+81 more)
(+38 files in other folders)
