[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-console"
version = "0.66.0"
description = "Orquestrador de agentes de IA em terminal (terminal-first) para handhelds Linux ARM (ClockworkPi uConsole)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "maestro console authors" }]
keywords = ["agents", "orchestration", "tmux", "terminal", "uconsole", "cli"]
dependencies = [
    "jsonschema>=4.0",   # validação estrita do envelope (FR15 / ADR-7)
]

[project.optional-dependencies]
tui = ["textual>=0.50"]            # interface TUI (Épico 4)
web = ["aiohttp>=3.9"]             # Web UI (v0.4.0)
dev = ["pytest>=8.0", "ruff>=0.4", "aiohttp>=3.9"]  # testes + lint/format

[project.scripts]
maestro = "maestro.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["maestro"]
# assets do canvas (ícones próprios + esquemas de tema) — garante que entrem no wheel
artifacts = [
    "maestro/native/icons/**/*.svg",
    "maestro/native/icons/dev-icons.json",
    "maestro/native/term_themes/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
# Lint só o código de produto. spike/ é descartável; demais são docs/infra/tooling.
extend-exclude = ["spike", "_bmad", "_bmad-output", "docs", ".venv", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
